--- a/MyPrivateLibrary/DinnerHandler/View/MainWindow.xaml
+++ b/MyPrivateLibrary/DinnerHandler/View/MainWindow.xaml
@@ -9,7 +9,7 @@
         Width="1000"
         Title="MVVM Light Application"
         DataContext="{Binding Main, Source={StaticResource Locator}}">
-    
+
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -24,8 +24,6 @@
             <ColumnDefinition Width="250"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Border BorderBrush="#AAA" BorderThickness="10" Grid.Column="0"/>
-        <Border BorderBrush="#AAA" BorderThickness="10" Grid.Column="1"/>
 
         <Grid Grid.Column="0">
             <Grid.RowDefinitions>
@@ -34,26 +32,25 @@
                 <RowDefinition Height="100"/>
             </Grid.RowDefinitions>
 
-            <Grid Row="0" Background="DarkGray"></Grid>
+            <Grid Row="0"></Grid>
             <Grid Row="1">
-                
-                
+
+
             </Grid>
-            <Grid Row="2" Background="DarkGray"></Grid>
-            
+            <Grid Row="2"></Grid>
+
         </Grid>
         <Grid Grid.Column="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="100"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <Border BorderBrush="#AAA" BorderThickness="2" Grid.Row="0"/>
 
             <Grid Grid.Row="0">
-                
+
             </Grid>
             <Grid Grid.Row="1">
-                
+
             </Grid>
 
         </Grid>
